# wombat

./: .gitignore  NOTICE  README.md  build.py
hello-world/: CMakeLists.txt  main.cpp  package.xml
kennel/: CMakeLists.txt  README.md  main.cpp  package.xml
kennel/bringup/: CMakeLists.txt
kennel/bringup/config/: kennel.yaml
kennel/bringup/launch/: kennel_launch.py
kennel/common/: CMakeLists.txt
kennel/common/src/: collisions.cpp  pose.cpp  range_projection.cpp
kennel/config/: kennel.yaml
kennel/include/kennel/: diff-kinematic-model.hpp  ground-truth-manager.hpp  kennel.hpp  mobile-base.hpp  robot-sim.hpp  robot_sim.hpp  slam-manager.hpp  types.hpp
kennel/kennel/: CMakeLists.txt  main.cpp
kennel/kennel/src/: kennel.cpp  robot_sim.cpp  sensors_manager.cpp  sim_time_manager.cpp
kennel/kennel_gtest/: CMakeLists.txt
kennel/kennel_gtest/src/: kennel_config.cpp  robot_config.cpp  robot_interface.cpp  single_robot_fixture.cpp
kennel/launch/: foxglove_bridge_launch.py  kennel_launch.py
kennel/maps/: hospital_section.yaml
kennel/plugins/: CMakeLists.txt  positioner_plugins.xml  sensor_plugins.xml
kennel/plugins/positioners/: CMakeLists.txt  lidar_slam_positioner.cpp  local_slam_positioner.cpp  stub_positioner.cpp
kennel/plugins/sensors/: CMakeLists.txt  bumper.cpp  lidar_2d.cpp  lidar_2dsimplified.cpp
kennel/plugins/src/: bumper.cpp  lidar_2d.cpp
kennel/src/: diff-kinematic-model.cpp  ground-truth-manager.cpp  kennel.cpp  mobile-base.cpp  robot-sim.cpp  robot_sim.cpp  slam-manager.cpp
kennel/src/mobile_base/: diff_kinematic_model.cpp  ground_truth_manager.cpp  mobile_base.cpp  slam_manager.cpp
kennel/src/sensors/: lidar_2d.cpp  sensor_base.cpp
kennel/test/: CMakeLists.txt  single_robot_fixture.hpp  test_collisions.cpp  test_empty_world.cpp  test_kennel_api.cpp  test_multi_positioner.cpp  test_positioners.cpp  test_positioners_lidar_slam.cpp  test_positioners_local_slam.cpp  test_range_projection.cpp  test_sensors_bumper.cpp  test_sim_time_manager.cpp  test_walls_world.cpp  utils.hpp
kennel/test/data/: empty_world.yaml  single_robot.yaml  walls_map.yaml  walls_world.yaml
wombat_apps/: CMakeLists.txt  package.xml
wombat_apps/src/: wombat_nav.cpp
wombat_bringup/: package.xml  setup.cfg  setup.py
wombat_bringup/config/: wombat_params.yaml
wombat_bringup/launch/: nav2_kennel_launch.py  nav2_sim_launch.py  rviz_launch.py  unity_bridge_launch.py  wombat_launch.py  wombat_sim_launch.py
wombat_bringup/params/: nav2_kennel_params.yaml  nav2_params.yaml
wombat_bringup_externals/: package.xml  setup.cfg  setup.py
wombat_bringup_externals/launch/: foxglove_bridge_launch.py  nav2_navigation_launch.py  nav2_sim_launch.py  rviz_launch.py
wombat_bringup_externals/params/: nav2_params.yaml
wombat_cmake/: CMakeLists.txt  README.md  WombatInstallExtras.cmake  WombatInstallTargetsExtras.cmake  WombatLintersExtras.cmake  WombatPackageExtras.cmake  WombatTargetExtras.cmake  git-hooks-config.yaml  package.xml
wombat_cmake/cmake/: AmentConfigExtras.cmake.in  BuildTypes.cmake  InstallHooks.cmake  WombatConfigExtras.cmake  WombatInstall.cmake  WombatInstallTargets.cmake  WombatLinters.cmake  WombatPackage.cmake  WombatTarget.cmake  sanitizer-options.c.in
wombat_cmake/githooks/: install_hooks.sh  pre-push
wombat_cmake/linters-config/: clang-tidy-checks  uncrustify-style.cfg
wombat_control/: CMakeLists.txt  package.xml
wombat_control/control/: CMakeLists.txt
wombat_control/control/src/: position_controller.cpp
wombat_control/data_types/: CMakeLists.txt
wombat_control/models/: CMakeLists.txt
wombat_control/models/src/: diff_drive_model.cpp  model_f_euler_dis.cpp
wombat_control/src/control/: position_controller.cpp
wombat_control/src/model/: model_f_euler_dis.cpp
wombat_control/test/: CMakeLists.txt  test_matrix.cpp  test_model.cpp  test_position_controller.cpp
wombat_core/: CMakeLists.txt  package.xml
wombat_core/costmap/: CMakeLists.txt
wombat_core/costmap/src/: costmap.cpp  costmap_conversions.cpp  costmap_utils.cpp  inflatable_costmap.cpp  inflation_layer.cpp  static_layer.cpp
wombat_core/cpp/: CMakeLists.txt
wombat_core/grid/: CMakeLists.txt
wombat_core/grid/src/: coordinates.cpp  geometry.cpp  line_iterator.cpp  neighbors.cpp  polygon_iterator.cpp  raytrace.cpp  submap_iterator.cpp
wombat_core/math/: CMakeLists.txt
wombat_core/math/src/: angles.cpp  grid.cpp  interpolation.cpp  online_statistics.cpp  statistics.cpp  transformations.cpp
wombat_core/ros2/: CMakeLists.txt
wombat_core/ros2/src/: parameters.cpp  time.cpp
wombat_core/test/: CMakeLists.txt  test_costmap.cpp  test_grid_boundary_projection.cpp  test_grid_coordinates.cpp  test_grid_geometry.cpp  test_grid_neighbors.cpp  test_grid_raytrace.cpp  test_math_angles.cpp  test_math_geometry_point.cpp  test_math_grid.cpp  test_math_grid_boundary_projection.cpp  test_math_grid_coordinates.cpp  test_math_grid_neighbors.cpp  test_math_grid_raytrace.cpp  test_math_online_stats.cpp  test_math_utils.cpp  test_ros2_parameters.cpp
wombat_hello_world/: CMakeLists.txt  package.xml
wombat_hello_world/src/: hello_publisher.cpp  main.cpp
wombat_hello_world/test/: test_hello.cpp
wombat_msgs/: CMakeLists.txt  package.xml
wombat_msgs/action/: Explore.action  FrontierNavigation.action
wombat_msgs/msg/: Bumper.msg
wombat_ops/: CMakeLists.txt  package.xml
wombat_ops/costmap/: CMakeLists.txt
wombat_ops/geometry/: CMakeLists.txt
wombat_ops/test/: CMakeLists.txt  test_costmap.cpp  test_geometry.cpp
wombat_srrg/: CMakeLists.txt  package.xml
wombat_srrg/hbst/: CMakeLists.txt
wombat_srrg/srrg2_core/: CMakeLists.txt
wombat_srrg/srrg2_laser_slam_2d/: CMakeLists.txt
wombat_srrg/srrg2_slam_interfaces/: CMakeLists.txt
wombat_srrg/srrg2_solver/: CMakeLists.txt
wombat_srrg/srrg_hbst/: CMakeLists.txt
wombat_srrg_slam/: CMakeLists.txt  package.xml
wombat_srrg_slam/hbst/: CMakeLists.txt  README.md
wombat_strategy/: CMakeLists.txt  package.xml
wombat_strategy/exploration/: CMakeLists.txt  README.md
wombat_strategy/frontiers/: CMakeLists.txt  README.md
(+1317 files in other folders)
