<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wombat_bringup</name>
  <version>0.0.1</version>
  <description>Bringup scripts for Wombat software</description>
  <maintainer email="alberto.soragna@gmail.com">Alberto Soragna</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>wombat_apps</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
