<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wombat_bringup_externals</name>
  <version>0.0.1</version>
  <description>Bringup scripts for Third-Party software</description>
  <maintainer email="alberto.soragna@gmail.com">Alberto Soragna</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
