<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wombat_cmake</name>
  <version>0.0.1</version>
  <description>Common CMake scripts used by the wombat code</description>
  <maintainer email="alberto.soragna@gmail.com">Alberto Soragna</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_export_dependencies</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <exec_depend>ament_cmake_clang_tidy</exec_depend>
  <exec_depend>ament_cmake_cppcheck</exec_depend>
  <exec_depend>ament_cmake_cpplint</exec_depend>
  <exec_depend>ament_cmake_flake8</exec_depend>
  <exec_depend>ament_cmake_lint_cmake</exec_depend>
  <exec_depend>ament_cmake_uncrustify</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
