<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>wombat_control</name>
  <version>0.0.1</version>
  <description>Modeling and low-level control package</description>
  <maintainer email="ilario.azzollini92@gmail.com">Ilario A. Azzollini</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>wombat_cmake</buildtool_depend>

  <build_depend>wombat_msgs</build_depend>

  <test_depend>wombat_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
